verified v2 other feature

--- a/other_hand_features/other_models_from_hand_feats_v4.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v4.ipynb
@@ -2,11 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                              band_1  \\\n",
+      "0  [-27.878360999999998, -27.15416, -28.668615, -...   \n",
+      "1  [-12.242375, -14.920304999999999, -14.920363, ...   \n",
+      "2  [-24.603676, -24.603714, -24.871029, -23.15277...   \n",
+      "3  [-22.454607, -23.082819, -23.998013, -23.99805...   \n",
+      "4  [-26.006956, -23.164886, -23.164886, -26.89116...   \n",
+      "\n",
+      "                                              band_2        id inc_angle  \\\n",
+      "0  [-27.154118, -29.537888, -31.0306, -32.190483,...  dfd5f913   43.9239   \n",
+      "1  [-31.506321, -27.984554, -26.645678, -23.76760...  e25388fd   38.1562   \n",
+      "2  [-24.870956, -24.092632, -20.653963, -19.41104...  58b2aaa0   45.2859   \n",
+      "3  [-27.889421, -27.519794, -27.165262, -29.10350...  4cfc3a18   43.8306   \n",
+      "4  [-27.206915, -30.259186, -30.259186, -23.16495...  271f93f4   35.6256   \n",
+      "\n",
+      "   is_iceberg  \n",
+      "0           0  \n",
+      "1           0  \n",
+      "2           1  \n",
+      "3           0  \n",
+      "4           0  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "train_df = pd.read_json('../input/train.json')\n",
@@ -14,7 +39,7 @@
     "print(train_df.head())\n",
     "\n",
     "import numpy as np\n",
-    "import cv2\n",
+    "\n",
     "from itertools import combinations\n",
     "from scipy.ndimage import laplace, sobel\n",
     "from scipy.stats import kurtosis, skew"
@@ -22,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
