--- a/other_hand_features/prepare_other_feat_v2_no_help.ipynb
+++ b/other_hand_features/prepare_other_feat_v2_no_help.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -41,7 +39,7 @@
     "print(train_df.head())\n",
     "\n",
     "import numpy as np\n",
-    "import cv2\n",
+    "\n",
     "from itertools import combinations\n",
     "from scipy.ndimage import laplace, sobel\n",
     "from scipy.stats import kurtosis, skew"
@@ -49,10 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -127,10 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -163,10 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -187,10 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -209,10 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -227,6 +215,359 @@
     "with open('other_feat_v2.pkl','wb') as fout:\n",
     "    pickle.dump([train_feat,test_feat],fout)\n",
     "print('done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = train_df.is_iceberg.values\n",
+    "print(y[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def done\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import log_loss\n",
+    "def cv_feat(model_f,fold_cnt=3,rnd=1,params={}):\n",
+    "    train_pred, test_pred = np.zeros((1604,1)),np.zeros((8424,1))\n",
+    "    kf = KFold(n_splits=fold_cnt, shuffle=True, random_state=2*rnd)\n",
+    "    avg_train_l,avg_val_l = 0,0\n",
+    "    print(model_f(**params))\n",
+    "    for train_index, test_index in kf.split(train_feat):\n",
+    "        curr_x,curr_y = train_feat[train_index],y[train_index]\n",
+    "        val_x,val_y = train_feat[test_index],y[test_index]\n",
+    "        \n",
+    "        model = model_f(**params)\n",
+    "        model.fit(curr_x,curr_y)\n",
+    "        \n",
+    "        curr_train_pred = model.predict_proba(curr_x)\n",
+    "        curr_val_pred = model.predict_proba(val_x)\n",
+    "        train_pred[test_index] = curr_val_pred[:,1].reshape(-1,1)\n",
+    "        curr_test_pred = model.predict_proba(test_feat)/fold_cnt\n",
+    "        test_pred = test_pred + curr_test_pred[:,1].reshape(-1,1)\n",
+    "        \n",
+    "        loss1 = log_loss(curr_y,curr_train_pred)\n",
+    "        loss2 = log_loss(val_y,curr_val_pred)\n",
+    "        avg_train_l += loss1/fold_cnt\n",
+    "        avg_val_l += loss2/fold_cnt\n",
+    "        print('this fold train loss',loss1,'val loss',loss2)\n",
+    "        print('============================')\n",
+    "    print('all avg',avg_train_l,avg_val_l)\n",
+    "    return train_pred,test_pred\n",
+    "print('def done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=2.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+      "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+      "          verbose=0, warm_start=False)\n",
+      "this fold train loss 0.0761390803135 val loss 0.442114692358\n",
+      "============================\n",
+      "this fold train loss 0.0337175187437 val loss 0.702713639411\n",
+      "============================\n",
+      "this fold train loss 0.0724086099569 val loss 0.597712904333\n",
+      "============================\n",
+      "all avg 0.0607550696714 0.580847078701\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lr\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "lr_train,lr_pred = cv_feat(LogisticRegression,\n",
+    "                           fold_cnt=3,\n",
+    "                           params={'C':2.0,'max_iter':100},rnd=2)\n",
+    "import pickle\n",
+    "with open('../features/other_model_lr7.pkl','wb') as fout:\n",
+    "    pickle.dump([lr_train,lr_pred],fout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+      "            max_depth=10, max_features='auto', max_leaf_nodes=None,\n",
+      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "            min_samples_leaf=1, min_samples_split=2,\n",
+      "            min_weight_fraction_leaf=0.0, n_estimators=200, n_jobs=1,\n",
+      "            oob_score=False, random_state=42, verbose=0, warm_start=False)\n",
+      "this fold train loss 0.128740787736 val loss 0.305932868302\n",
+      "============================\n",
+      "this fold train loss 0.124030235835 val loss 0.305320732207\n",
+      "============================\n",
+      "this fold train loss 0.127972092023 val loss 0.275160370834\n",
+      "============================\n",
+      "this fold train loss 0.121737927165 val loss 0.305756764667\n",
+      "============================\n",
+      "this fold train loss 0.121338976419 val loss 0.304676323654\n",
+      "============================\n",
+      "all avg 0.124764003836 0.299369411933\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier,GradientBoostingClassifier,AdaBoostClassifier\n",
+    "tmp_params = {\n",
+    "    'n_estimators':200,\n",
+    "    'max_depth':10,\n",
+    "    'random_state':42\n",
+    "}\n",
+    "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,params=tmp_params)\n",
+    "with open('../features/other_model_rf7.pkl','wb') as fout:\n",
+    "    pickle.dump([lr_train,lr_pred],fout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GradientBoostingClassifier(criterion='friedman_mse', init=None,\n",
+      "              learning_rate=0.1, loss='deviance', max_depth=3,\n",
+      "              max_features=None, max_leaf_nodes=None,\n",
+      "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "              min_samples_leaf=1, min_samples_split=2,\n",
+      "              min_weight_fraction_leaf=0.0, n_estimators=200,\n",
+      "              presort='auto', random_state=42, subsample=1.0, verbose=0,\n",
+      "              warm_start=False)\n",
+      "this fold train loss 0.0281238220576 val loss 0.255942292154\n",
+      "============================\n",
+      "this fold train loss 0.0304946134064 val loss 0.188922140755\n",
+      "============================\n",
+      "this fold train loss 0.0281900251133 val loss 0.189564815278\n",
+      "============================\n",
+      "this fold train loss 0.0281916011683 val loss 0.267575691488\n",
+      "============================\n",
+      "this fold train loss 0.0243354680047 val loss 0.246977965575\n",
+      "============================\n",
+      "all avg 0.0278671059501 0.22979658105\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp_params = {\n",
+    "    'n_estimators':200,\n",
+    "    'learning_rate':0.1,\n",
+    "    'random_state':42,\n",
+    "    'subsample':1.0,\n",
+    "    'min_samples_leaf':1,\n",
+    "    'max_depth':3\n",
+    "}\n",
+    "lr_train,lr_pred = cv_feat(GradientBoostingClassifier,fold_cnt=5,\n",
+    "                           params=tmp_params,\n",
+    "                           rnd=1\n",
+    "                          )\n",
+    "with open('../features/other_model_gbrt7.pkl','wb') as fout:\n",
+    "    pickle.dump([lr_train,lr_pred],fout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+      "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
+      "       max_depth=3, min_child_weight=1, missing=None, n_estimators=200,\n",
+      "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
+      "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+      "       silent=True, subsample=1)\n",
+      "this fold train loss 0.02246326917 val loss 0.231757284542\n",
+      "============================\n",
+      "this fold train loss 0.0239874552491 val loss 0.181537029974\n",
+      "============================\n",
+      "this fold train loss 0.026027627392 val loss 0.177070917681\n",
+      "============================\n",
+      "this fold train loss 0.0219136759222 val loss 0.232186944644\n",
+      "============================\n",
+      "this fold train loss 0.020677132659 val loss 0.254215241355\n",
+      "============================\n",
+      "all avg 0.0230138320785 0.215353483639\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "tmp_params = {\n",
+    "    'n_estimators':200,\n",
+    "    'colsample_bytree':1,\n",
+    "    'min_child_weight':1,\n",
+    "    'learning_rate':0.1,\n",
+    "\n",
+    "    \n",
+    "}\n",
+    "lr_train,lr_pred = cv_feat(XGBClassifier,fold_cnt=5,\n",
+    "                           params=tmp_params,rnd=1)\n",
+    "with open('../features/other_model_xgb7.pkl','wb') as fout:\n",
+    "    pickle.dump([lr_train,lr_pred],fout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LGBMClassifier(boosting_type='gbdt', colsample_bytree=1.0, learning_rate=0.1,\n",
+      "        max_bin=255, max_depth=3, min_child_samples=20,\n",
+      "        min_child_weight=0.001, min_split_gain=0.0, n_estimators=200,\n",
+      "        n_jobs=-1, num_leaves=31, objective=None, random_state=None,\n",
+      "        reg_alpha=0.0, reg_lambda=0.0, silent=True, subsample=1.0,\n",
+      "        subsample_for_bin=200000, subsample_freq=1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.0183686901417 val loss 0.223089667146\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.0198495049086 val loss 0.178964678422\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.0199706077022 val loss 0.195401615819\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.0180027578754 val loss 0.238189771849\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.0178435566771 val loss 0.261397357126\n",
+      "============================\n",
+      "all avg 0.018807023461 0.219408618072\n"
+     ]
+    }
+   ],
+   "source": [
+    "from lightgbm import LGBMClassifier\n",
+    "tmp_params = {\n",
+    "    'max_depth':3,  \n",
+    "    'n_estimators':200,\n",
+    "    #'min_child_samples':20,\n",
+    "    #'reg_lambda':0.1,\n",
+    "}\n",
+    "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,params=tmp_params)\n",
+    "with open('../features/other_model_lgb7.pkl','wb') as fout:\n",
+    "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   }
  ],
