--- a/other_hand_features/other_models_from_hand_feats_v2.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v2.ipynb
@@ -39,7 +39,7 @@
     "print(train_df.head())\n",
     "\n",
     "import numpy as np\n",
-    "import cv2\n",
+    "\n",
     "from itertools import combinations\n",
     "from scipy.stats import kurtosis, skew\n",
     "from scipy.ndimage import laplace, sobel\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,21 @@
       "LogisticRegression(C=2.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-      "          verbose=0, warm_start=False)\n",
+      "          verbose=0, warm_start=False)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/linear_model/base.py:340: RuntimeWarning: overflow encountered in exp\n",
+      "  np.exp(prob, prob)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "this fold train loss 0.150262123761 val loss 0.28825628492\n",
       "============================\n",
       "this fold train loss 0.170058937695 val loss 0.235593068118\n",
@@ -217,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,9 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tmp_params = {\n",
@@ -278,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
