--- a/notebooks/lr_ensemble-all.ipynb
+++ b/notebooks/lr_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,31 @@
       "'../features/incept_aug3_feat.pkl',\n",
       "'../features/incept_aug4_feat.pkl',\n",
       "'../features/other_feat.pkl',\n",
+      "'../features/other_model_gbrt.pkl',\n",
+      "'../features/other_model_gbrt2.pkl',\n",
+      "'../features/other_model_gbrt4.pkl',\n",
+      "'../features/other_model_gbrt5.pkl',\n",
+      "'../features/other_model_gbrt6.pkl',\n",
+      "'../features/other_model_lgb.pkl',\n",
+      "'../features/other_model_lgb2.pkl',\n",
+      "'../features/other_model_lgb4.pkl',\n",
+      "'../features/other_model_lgb5.pkl',\n",
+      "'../features/other_model_lgb6.pkl',\n",
+      "'../features/other_model_lr.pkl',\n",
+      "'../features/other_model_lr2.pkl',\n",
+      "'../features/other_model_lr4.pkl',\n",
+      "'../features/other_model_lr5.pkl',\n",
+      "'../features/other_model_lr6.pkl',\n",
+      "'../features/other_model_rf.pkl',\n",
+      "'../features/other_model_rf2.pkl',\n",
+      "'../features/other_model_rf4.pkl',\n",
+      "'../features/other_model_rf5.pkl',\n",
+      "'../features/other_model_rf6.pkl',\n",
+      "'../features/other_model_xgb.pkl',\n",
+      "'../features/other_model_xgb2.pkl',\n",
+      "'../features/other_model_xgb4.pkl',\n",
+      "'../features/other_model_xgb5.pkl',\n",
+      "'../features/other_model_xgb6.pkl',\n",
       "'../features/resnet_1_feat.pkl',\n",
       "'../features/resnet_aug1_feat.pkl',\n",
       "'../features/resnet_aug1_fold8_feat.pkl',\n",
@@ -72,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 56) (8424, 56) (1604,)\n"
+      "(1604, 81) (8424, 81) (1604,)\n"
      ]
     }
    ],
@@ -104,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,11 +154,12 @@
     "        \n",
     "        # cal val loss\n",
     "        curr_val_loss = log_loss(y_test,m.predict_proba(X_test))\n",
+    "        curr_tr_loss = log_loss(y_train,m.predict_proba(X_train))\n",
     "        val_loss += curr_val_loss/k_cnt\n",
     "        val_loss_list.append(curr_val_loss)\n",
     "        curr_r_val_loss = 1.0 / curr_val_loss\n",
     "        r_val_loss += curr_r_val_loss\n",
-    "        print('curr val loss', curr_val_loss)\n",
+    "        print('curr train loss',curr_tr_loss,'curr val loss', curr_val_loss)\n",
     "        \n",
     "        if test_pred is None:\n",
     "            test_pred = m.predict_proba(test_x)\n",
@@ -165,30 +191,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "curr val loss 0.17250514\n",
-      "curr val loss 0.149592336871\n",
-      "curr val loss 0.167521660113\n",
-      "local average valid loss 0.163206378995 val loss std 0.00983921999488\n",
+      "curr train loss 0.121489485896 curr val loss 0.161220116863\n",
+      "curr train loss 0.120532264156 curr val loss 0.157156100942\n",
+      "curr train loss 0.118121620929 curr val loss 0.168833538171\n",
+      "local average valid loss 0.162403251992 val loss std 0.00484014404794\n",
       "(8424, 2)\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.015250\n",
-      "1  4023181e    0.927541\n",
-      "2  b20200e4    0.013871\n",
-      "3  e7f018bb    0.986836\n",
-      "4  4371c8c3    0.751995\n",
+      "0  5941774d    0.011834\n",
+      "1  4023181e    0.800866\n",
+      "2  b20200e4    0.060130\n",
+      "3  e7f018bb    0.992343\n",
+      "4  4371c8c3    0.520726\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.015251\n",
-      "1  4023181e    0.927438\n",
-      "2  b20200e4    0.014212\n",
-      "3  e7f018bb    0.987066\n",
-      "4  4371c8c3    0.748066\n"
+      "0  5941774d    0.011785\n",
+      "1  4023181e    0.801162\n",
+      "2  b20200e4    0.060697\n",
+      "3  e7f018bb    0.992369\n",
+      "4  4371c8c3    0.521647\n"
      ]
     }
    ],
@@ -198,32 +224,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "curr val loss 0.185458156671\n",
-      "curr val loss 0.147440206936\n",
-      "curr val loss 0.172896028422\n",
-      "curr val loss 0.156557219055\n",
-      "curr val loss 0.167101765428\n",
-      "local average valid loss 0.165890675302 val loss std 0.0131222042904\n",
+      "curr train loss 0.121353564752 curr val loss 0.168377142044\n",
+      "curr train loss 0.127173648931 curr val loss 0.138150706551\n",
+      "curr train loss 0.121630336465 curr val loss 0.166146758967\n",
+      "curr train loss 0.128969595744 curr val loss 0.138714470399\n",
+      "curr train loss 0.118095975335 curr val loss 0.180360238539\n",
+      "local average valid loss 0.1583498633 val loss std 0.016966726891\n",
       "(8424, 2)\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.015231\n",
-      "1  4023181e    0.933889\n",
-      "2  b20200e4    0.008210\n",
-      "3  e7f018bb    0.987327\n",
-      "4  4371c8c3    0.753284\n",
+      "0  5941774d    0.011346\n",
+      "1  4023181e    0.788997\n",
+      "2  b20200e4    0.051450\n",
+      "3  e7f018bb    0.992099\n",
+      "4  4371c8c3    0.479738\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.015128\n",
-      "1  4023181e    0.934645\n",
-      "2  b20200e4    0.008315\n",
-      "3  e7f018bb    0.987441\n",
-      "4  4371c8c3    0.754875\n"
+      "0  5941774d    0.011381\n",
+      "1  4023181e    0.791712\n",
+      "2  b20200e4    0.054284\n",
+      "3  e7f018bb    0.992156\n",
+      "4  4371c8c3    0.489019\n"
      ]
     }
    ],
@@ -233,37 +259,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "curr val loss 0.185523119869\n",
-      "curr val loss 0.178969519124\n",
-      "curr val loss 0.173288988705\n",
-      "curr val loss 0.119992681865\n",
-      "curr val loss 0.1947546428\n",
-      "curr val loss 0.138849813311\n",
-      "curr val loss 0.164255325512\n",
-      "curr val loss 0.151445730826\n",
-      "curr val loss 0.165693066272\n",
-      "curr val loss 0.175401543369\n",
-      "local average valid loss 0.164817443165 val loss std 0.0213833928399\n",
+      "curr train loss 0.11504411745 curr val loss 0.176099936678\n",
+      "curr train loss 0.120782530831 curr val loss 0.159173131512\n",
+      "curr train loss 0.120636235176 curr val loss 0.161831994215\n",
+      "local average valid loss 0.165701687468 val loss std 0.00743236515447\n",
       "(8424, 2)\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.014748\n",
-      "1  4023181e    0.935957\n",
-      "2  b20200e4    0.006748\n",
-      "3  e7f018bb    0.987536\n",
-      "4  4371c8c3    0.757940\n",
+      "0  5941774d    0.011121\n",
+      "1  4023181e    0.788731\n",
+      "2  b20200e4    0.163219\n",
+      "3  e7f018bb    0.992280\n",
+      "4  4371c8c3    0.523322\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.014599\n",
-      "1  4023181e    0.936214\n",
-      "2  b20200e4    0.006698\n",
-      "3  e7f018bb    0.987591\n",
-      "4  4371c8c3    0.758685\n"
+      "0  5941774d    0.011125\n",
+      "1  4023181e    0.794758\n",
+      "2  b20200e4    0.166800\n",
+      "3  e7f018bb    0.992213\n",
+      "4  4371c8c3    0.531448\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(3,252,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curr train loss 0.123599804306 curr val loss 0.152036961168\n",
+      "curr train loss 0.119206879091 curr val loss 0.174399826345\n",
+      "curr train loss 0.12643009826 curr val loss 0.145396785003\n",
+      "curr train loss 0.121342071709 curr val loss 0.170138677713\n",
+      "curr train loss 0.127980228221 curr val loss 0.136111242107\n",
+      "local average valid loss 0.155616698467 val loss std 0.0145699536873\n",
+      "(8424, 2)\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.013027\n",
+      "1  4023181e    0.787112\n",
+      "2  b20200e4    0.057496\n",
+      "3  e7f018bb    0.992034\n",
+      "4  4371c8c3    0.477261\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.013175\n",
+      "1  4023181e    0.785762\n",
+      "2  b20200e4    0.057877\n",
+      "3  e7f018bb    0.991869\n",
+      "4  4371c8c3    0.476128\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(5,66,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curr train loss 0.120319500886 curr val loss 0.195590372718\n",
+      "curr train loss 0.126939329683 curr val loss 0.147522889249\n",
+      "curr train loss 0.125974840789 curr val loss 0.150496182728\n",
+      "curr train loss 0.126893110067 curr val loss 0.130027336743\n",
+      "curr train loss 0.118943272443 curr val loss 0.21194658441\n",
+      "curr train loss 0.129243002347 curr val loss 0.116962705284\n",
+      "curr train loss 0.123624738088 curr val loss 0.181040668855\n",
+      "curr train loss 0.130371923206 curr val loss 0.105794068777\n",
+      "curr train loss 0.122850862868 curr val loss 0.182407767002\n",
+      "curr train loss 0.12243698971 curr val loss 0.176234398524\n",
+      "local average valid loss 0.159802297429 val loss std 0.0333286032661\n",
+      "(8424, 2)\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.011658\n",
+      "1  4023181e    0.788168\n",
+      "2  b20200e4    0.049522\n",
+      "3  e7f018bb    0.991966\n",
+      "4  4371c8c3    0.477538\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.011668\n",
+      "1  4023181e    0.785544\n",
+      "2  b20200e4    0.048550\n",
+      "3  e7f018bb    0.991918\n",
+      "4  4371c8c3    0.481422\n"
      ]
     }
    ],
