--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
    "source": [
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.metrics import log_loss\n",
-    "def cv_test(k_cnt=3,rnd=42,save_flag=False):\n",
+    "def cv_test(k_cnt=3,rnd=42,save_flag=False,verbose_cnt=False):\n",
     "    kf = StratifiedKFold(n_splits=k_cnt, shuffle=True, random_state=rnd*2)\n",
     "    w_test_pred = None\n",
     "    r_val_loss = 0\n",
@@ -178,7 +178,7 @@
     "        # train model\n",
     "        m = xgb.train(params, d_train, 500, watchlist, \n",
     "                        early_stopping_rounds=20,\n",
-    "                        verbose_eval=False\n",
+    "                        verbose_eval=verbose_cnt\n",
     "                        )\n",
     "        \n",
     "        # cal val loss\n",
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -475,6 +475,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0]\ttrain-logloss:0.636166\tvalid-logloss:0.639833\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[138]\ttrain-logloss:0.030478\tvalid-logloss:0.126177\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636\tvalid-logloss:0.639144\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[81]\ttrain-logloss:0.05569\tvalid-logloss:0.137791\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635984\tvalid-logloss:0.64014\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[101]\ttrain-logloss:0.045349\tvalid-logloss:0.144128\n",
+      "\n",
       "local average valid loss 0.137414263225 val loss std 0.00780035335958\n",
       "         id  is_iceberg\n",
       "0  5941774d    0.026259\n",
@@ -492,18 +513,53 @@
     }
    ],
    "source": [
-    "cv_test(3,252,True)"
+    "cv_test(3,252,True,500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0]\ttrain-logloss:0.636517\tvalid-logloss:0.637451\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[125]\ttrain-logloss:0.039947\tvalid-logloss:0.123319\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635833\tvalid-logloss:0.639346\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[82]\ttrain-logloss:0.061432\tvalid-logloss:0.154324\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636394\tvalid-logloss:0.636728\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[68]\ttrain-logloss:0.073152\tvalid-logloss:0.134726\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635661\tvalid-logloss:0.640291\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[83]\ttrain-logloss:0.060267\tvalid-logloss:0.145153\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636227\tvalid-logloss:0.636386\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[97]\ttrain-logloss:0.054614\tvalid-logloss:0.11044\n",
+      "\n",
       "local average valid loss 0.134508066085 val loss std 0.0151440443714\n",
       "         id  is_iceberg\n",
       "0  5941774d    0.032433\n",
@@ -521,7 +577,7 @@
     }
    ],
    "source": [
-    "cv_test(5,66,True)"
+    "cv_test(5,66,True,500)"
    ]
   },
   {
